# netlink

./: .gitignore  .licenserc.yaml  .travis.yml  CHANGELOG  Cargo.toml  Dockerfile  README.md  RELEASE_PROCESS.md  build.rs  network-audit.mayhemfile  network-route.mayhemfile  out.pcap  rustfmt.toml
audit/: Cargo.toml
audit/examples/: add_rules.rs  dump_audit_rules.rs  dump_rules.rs  enable_audit.rs  events.rs  events_async.rs
audit/src/: errors.rs  handle.rs  lib.rs
ethtool/: Cargo.toml
ethtool/examples/: dump_coalesce.rs  dump_features.rs  dump_link_mode.rs  dump_pause.rs  dump_rings.rs
ethtool/src/: connection.rs  error.rs  handle.rs  header.rs  lib.rs  macros.rs  message.rs
ethtool/tests/: dump_link_modes.rs  get_features_lo.rs
genetlink/: Cargo.toml
genetlink/examples/: dump_family_policy.rs  list_generic_family.rs
genetlink/src/: connection.rs  error.rs  handle.rs  lib.rs  message.rs  resolver.rs
iproute2/: Cargo.toml
iproute2/examples/: add_address.rs  create_dummy_link.rs  del_address.rs  del_link.rs  dump_addresses.rs  dump_links.rs  flush_addresses.rs  set_link_down.rs
iproute2/src/: errors.rs  lib.rs
netlink-ethtool/: Cargo.toml  connection.rs  error.rs  handle.rs  header.rs  lib.rs  message.rs
netlink-ethtool/pause/: get.rs  handle.rs  mod.rs
netlink-generic/: Cargo.toml  buffer.rs  connection.rs  ctrl.rs  error.rs  handle.rs  header.rs  lib.rs  macros.rs  message.rs
netlink-generic/tests/: genl_ctrl_resolve_ethtool.rs
netlink-ip/: Cargo.toml  aaa.pcap  del_link
netlink-ip/examples/: create_dummy_link.rs  del_link.rs  dump_links.rs  set_link_down.rs
netlink-ip/src/: errors.rs  lib.rs  link.rs
netlink-packet/: Cargo.toml
netlink-packet-audit/: Cargo.toml
netlink-packet-audit/fuzz/: Cargo.toml
netlink-packet-audit/src/: archs.rs  buffer.rs  codec.rs  commands.rs  constants.rs  events.rs  lib.rs  message.rs  status.rs  traits.rs
netlink-packet-connector/: Cargo.toml
netlink-packet-connector/src/: lib.rs  message.rs
netlink-packet-core/: Cargo.toml
netlink-packet-core/examples/: protocol.rs  rtnetlink.rs
netlink-packet-core/src/: buffer.rs  error.rs  lib.rs  message.rs  payload.rs  traits.rs
netlink-packet-generic/: Cargo.toml
netlink-packet-generic/examples/: list_generic_family.rs
netlink-packet-generic/src/: buffer.rs  constants.rs  header.rs  lib.rs  message.rs  traits.rs
netlink-packet-generic/tests/: query_family_id.rs
netlink-packet-netfilter/: Cargo.toml
netlink-packet-netfilter/examples/: nflog.rs
netlink-packet-netfilter/src/: buffer.rs  constants.rs  lib.rs  message.rs  nflog.rs
netlink-packet-route/: Cargo.toml
netlink-packet-route/benches/: link_message.rs  rtnetlink_dump.rs
netlink-packet-route/examples/: dump_links.rs  dump_neighbours.rs  dump_packet_links.rs  dump_rules.rs  new_rule.rs
netlink-packet-route/fuzz/: Cargo.toml
netlink-packet-route/src/: buffer.rs  lib.rs  macros.rs  message.rs  nla.rs  test.rs
netlink-packet-sock-diag/: Cargo.toml
netlink-packet-sock-diag/examples/: dump_ipv4.rs
netlink-packet-sock-diag/src/: buffer.rs  constants.rs  lib.rs  message.rs
netlink-packet-utils/: Cargo.toml
netlink-packet-utils/src/: errors.rs  macros.rs  nla.rs  parsers.rs  traits.rs
netlink-packet-wireguard/: Cargo.toml
netlink-packet-wireguard/examples/: get_wireguard_info.rs
netlink-packet-wireguard/src/: constants.rs  lib.rs  raw.rs
netlink-packet-xfrm/: Cargo.toml  LICENSE-MIT
netlink-packet-xfrm/src/: address.rs  async_event_id.rs  buffer.rs  constants.rs  id.rs  lib.rs  lifetime.rs  message.rs  selector.rs  stats.rs  tests.rs  user_acquire.rs  user_expire.rs  user_mapping.rs  user_polexpire.rs  user_policy_default.rs  user_policy_id.rs  user_policy_info.rs  user_policy_type.rs  user_report.rs  user_sa_id.rs  user_sa_info.rs  user_spi_info.rs
netlink-packet/benches/: link_message.rs  rtnetlink_dump.rs
netlink-packet/examples/: dump_links.rs  dump_links_tokio.rs  netstat.rs
netlink-packet/fuzz/: Cargo.toml
netlink-packet/src/: errors.rs  lib.rs  traits.rs
netlink-proto/: Cargo.toml
netlink-proto/examples/: audit_events.rs  audit_netlink_events.rs  dump_links.rs  dump_links_tokio.rs  listen_uevents.rs
netlink-proto/src/: codecs.rs  connection.rs  errors.rs  framed.rs  handle.rs  lib.rs  request.rs
netlink-socket/: Cargo.toml
netlink-socket/src/: lib.rs  mio.rs  protocols.rs  tokio.rs
netlink-sys/: Cargo.toml
netlink-sys/examples/: audit_events.rs  audit_events_async.rs  audit_events_async_std.rs  audit_events_tokio.rs  audit_events_tokio_manual_thread_builder.rs  audit_mcast.rs  dump_links.rs  dump_links_tokio.rs  listen_uevents.rs  man_test0.rs
netlink-sys/src/: addr.rs  async_socket.rs  async_socket_ext.rs  async_std.rs  bindgen_constants.rs  codecs.rs  constants.rs  framed.rs  lib.rs  mio.rs  protocols.rs  smol.rs  socket.rs  sys.rs  tokio.rs
rtnetlink/: Cargo.toml
rtnetlink/examples/: add_address.rs  add_neighbour.rs  add_route.rs  add_route_pref_src.rs  add_rule.rs  create_bridge.rs  create_dummy_link.rs  create_ipip.rs  create_macvlan.rs  create_macvtap.rs  create_veth.rs  create_vxlan.rs  del_address.rs  del_link.rs  dump_links.rs  dump_links_tokio.rs  flush_addresses.rs  get_address.rs  get_links.rs  get_links0.rs  get_links_async.rs  get_links_thread_builder.rs  ip_monitor.rs  listen.rs  property_altname.rs  set_link_down.rs
rtnetlink/src/: bindgen_constants.rs  codecs.rs  connection.rs  constants.rs  errors.rs  flags.rs  framed.rs  handle.rs  lib.rs  ns.rs
sock_diag/: Cargo.toml
sock_diag/examples/: ss.rs
sock_diag/src/: errors.rs  handle.rs  lib.rs
taskstats/: Cargo.toml
taskstats/src/: lib.rs  message.rs  nlas.rs
xfrmnetlink/: Cargo.toml
xfrmnetlink/examples/: action_policy.rs  add_upd_policy.rs  add_upd_state.rs  add_upd_state_noack.rs  allocspi_state.rs  count_policy.rs  count_state.rs  del_get_policy.rs  del_get_state.rs  flush_policy.rs  flush_state.rs  list_policy.rs  list_state.rs  monitor.rs  spd_policy.rs
xfrmnetlink/src/: connection.rs  constants.rs  errors.rs  handle.rs  lib.rs  macros.rs
(+640 files in other folders)
