[workspace]

members = [
    "netlink-sys",
    "netlink-packet-core",
    "netlink-packet-utils",
    "netlink-packet-route",
    "netlink-packet-route/fuzz",
    "netlink-packet-audit",
    "netlink-packet-audit/fuzz",
    "netlink-packet-sock-diag",
    "netlink-proto",
    "netlink-generic",
    "rtnetlink",
    "audit",
]

# omit fuzz projects
default-members = [
    "netlink-sys",
    "netlink-packet-core",
    "netlink-packet-utils",
    "netlink-packet-route",
    "netlink-packet-audit",
    "netlink-packet-sock-diag",
    "netlink-proto",
    "netlink-generic",
    "rtnetlink",
    "audit",
]

[patch.crates-io]
netlink-sys = { path = "netlink-sys" }
netlink-packet-core = { path = "netlink-packet-core" }
netlink-packet-utils = { path = "netlink-packet-utils" }
netlink-packet-route = { path = "netlink-packet-route" }
netlink-packet-audit = { path = "netlink-packet-audit" }
netlink-packet-sock-diag = { path = "netlink-packet-sock-diag" }
netlink-proto = { path = "netlink-proto" }
rtnetlink = { path = "rtnetlink" }
netlink-generic = { path = "netlink-generic" }
audit = { path = "audit" }
