[workspace]

members = [
    "netlink-sys",
    "netlink-packet-core",
    "netlink-packet-utils",
    "netlink-packet-generic",
    "netlink-packet-route",
    "netlink-packet-route/fuzz",
    "netlink-packet-audit",
    "netlink-packet-audit/fuzz",
    "netlink-packet-sock-diag",
    "netlink-packet-netfilter",
    "netlink-packet-wireguard",
    "netlink-proto",
    "ethtool",
    "genetlink",
    "rtnetlink",
    "audit",
    "mptcp-pm",
]

# omit fuzz projects
default-members = [
    "netlink-sys",
    "netlink-packet-core",
    "netlink-packet-utils",
    "netlink-packet-generic",
    "netlink-packet-route",
    "netlink-packet-audit",
    "netlink-packet-sock-diag",
    "netlink-packet-netfilter",
    "netlink-packet-wireguard",
    "netlink-proto",
    "ethtool",
    "genetlink",
    "rtnetlink",
    "audit",
    "mptcp-pm",
]
