[package]
name = "audit"
version = "0.2.1"
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
edition = "2018"

homepage = "https://github.com/little-dude/netlink"
keywords = ["netlink", "ip", "linux", "audit"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/little-dude/netlink"
description = "linux audit via netlink"

[dependencies]
futures = "0.3.11"
thiserror = "1"
netlink-packet-audit = { path = "../netlink-packet-audit", version = "0.2" }
netlink-proto = { path = "../netlink-proto", features = ["workaround-audit-bug"], version = "0.5" }

[dev-dependencies]
tokio = { version = "1.0.1", default-features = false, features = ["macros", "rt-multi-thread"] }
env_logger = "0.7.1"
