[package]
name = "ethtool"
version = "0.2.2"
authors = ["Gris Ge <fge@redhat.com>"]
license = "MIT"
edition = "2018"
description = "Linux Ethtool Communication Library"
keywords = ["network"]
categories = ["network-programming", "os"]
readme = "../README.md"

[lib]
name = "ethtool"
path = "src/lib.rs"
crate-type = ["lib"]

[features]
default = ["tokio_socket"]
tokio_socket = ["netlink-proto/tokio_socket", "tokio"]
smol_socket = ["netlink-proto/smol_socket", "async-std"]

[dependencies]
anyhow = "1.0.44"
async-std = { version = "1.9.0", optional = true}
byteorder = "1.4.3"
futures = "0.3.17"
log = "0.4.14"
genetlink = { default-features = false, version = "0.2.1", path = "../genetlink" }
netlink-packet-core = { version = "0.4.2", path = "../netlink-packet-core" }
netlink-packet-generic = { version = "0.2.0", path = "../netlink-packet-generic" }
netlink-packet-utils = { version = "0.5.1", path = "../netlink-packet-utils" }
netlink-proto = { default-features = false, version = "0.9.2", path = "../netlink-proto" }
netlink-sys = { version = "0.8.2", path = "../netlink-sys" }
thiserror = "1.0.29"
tokio = { version = "1.0.1", features = ["rt"], optional = true}

[dev-dependencies]
tokio = { version = "1.11.0", features = ["macros", "rt", "rt-multi-thread"] }
env_logger = "0.9.0"

[[example]]
name = "dump_pause"
required-features = ["tokio_socket"]
