[package]
name = "genetlink"
version = "0.1.0"
authors = ["Leo <leo881003@gmail.com>"]
edition = "2018"
homepage = "https://github.com/little-dude/netlink"
repository = "https://github.com/little-dude/netlink"
keywords = ["netlink", "linux"]
license = "MIT"
readme = "../README.md"
description = "communicate with generic netlink"

[features]
default = ["tokio_socket"]
tokio_socket = ["netlink-proto/tokio_socket","netlink-proto/workaround-audit-bug", "tokio"]
smol_socket = ["netlink-proto/smol_socket","netlink-proto/workaround-audit-bug","async-std"]

[dependencies]
futures = "0.3.16"
netlink-packet-generic = "0.1.0"
netlink-proto = { default-features = false, version = "0.7.0" }
tokio = { version = "1.9.0", features = ["rt"], optional = true }
async-std = { version = "1.9.0", optional = true }
netlink-packet-utils = "0.4.1"
netlink-packet-core = "0.2.4"
thiserror = "1.0.26"

[dev-dependencies]
anyhow = "1.0.42"
tokio = { version = "1.9.0", features = ["rt", "rt-multi-thread", "macros"] }

[[example]]
name = "list_generic_family"
required-features = ["tokio_socket"]

[[example]]
name = "dump_family_policy"
required-features = ["tokio_socket"]
