[package]
name = "genetlink"
version = "0.2.2"
authors = ["Leo <leo881003@gmail.com>"]
edition = "2018"
homepage = "https://github.com/little-dude/netlink"
repository = "https://github.com/little-dude/netlink"
keywords = ["netlink", "linux"]
license = "MIT"
readme = "../README.md"
description = "communicate with generic netlink"

[features]
default = ["tokio_socket"]
tokio_socket = ["netlink-proto/tokio_socket", "tokio"]
smol_socket = ["netlink-proto/smol_socket","async-std"]

[dependencies]
futures = "0.3.16"
netlink-proto = { default-features = false, version = "0.9.3" , path = "../netlink-proto" }
netlink-packet-generic = { version = "0.3.1", path = "../netlink-packet-generic" }
netlink-packet-utils = { version = "0.5.1", path = "../netlink-packet-utils" }
netlink-packet-core = { version = "0.4.2", path = "../netlink-packet-core" }
tokio = { version = "1.9.0", features = ["rt"], optional = true }
async-std = { version = "1.9.0", optional = true }
thiserror = "1.0.26"

[dev-dependencies]
anyhow = "1.0.42"
tokio = { version = "1.9.0", features = ["rt", "rt-multi-thread", "macros"] }

[[example]]
name = "list_genetlink_family"
required-features = ["tokio_socket"]

[[example]]
name = "dump_family_policy"
required-features = ["tokio_socket"]
