[package]
name = "iproute2"
version = "0.0.2"
authors = ["Corentin Henry <corentinhenry@gmail.com>"]

homepage = "https://github.com/little-dude/netlink"
keywords = ["netlink", "ip", "linux"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/little-dude/netlink"
description = "manipulate linux networking resources via netlink"

[dependencies]
bytes = "0.4.8"
tokio-core = "0.1.17"
futures = "0.1.22"
log = "0.4.3"
lazy_static = "1.0.1"
eui48 = "0.3.2"
failure = "0.1.1"
failure_derive = "0.1.1"

[dependencies.rtnetlink]
version = "0.0"
default-features = false
features = ["tokio_support"]
path = "../rtnetlink"

[dependencies.netlink-socket]
version = "0.0"
default-features = false
features = ["tokio_support"]
path = "../netlink-socket"

[dev-dependencies]
env_logger = "0.5.10"
