[package]
name = "netlink-ip"
version = "0.0.1"
authors = ["Corentin Henry <corentinhenry@gmail.com>"]

homepage = "https://github.com/little-dude/netlink"
keywords = ["netlink", "ip", "linux"]
license-file = "../LICENSE-MIT"
readme = "../README.md"
repository = "https://github.com/little-dude/netlink"
description = "route netlink protocol (a.k.a. rtnl)"

[dependencies]
bytes = "0.4.8"
tokio-core = "0.1.17"
futures = "0.1.22"
log = "0.4.3"
lazy_static = "1.0.1"
eui48 = "0.3.2"
failure = "0.1.1"
failure_derive = "0.1.1"

[dependencies.netlink-sys]
version = "0.0.1"
default-features = false
features = ["rtnl_support", "tokio_support"]
path = "../netlink-sys"

[dev-dependencies]
env_logger = "0.5.10"
