[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-packet-audit"
version = "0.3.0"  # TODO: drop this comment - already bumped version for trait changes
edition = "2018"

homepage = "https://github.com/little-dude/netlink"
keywords = ["netlink", "linux"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/little-dude/netlink"
description = "netlink packet types"

[dependencies]
anyhow = "1.0.31"
byteorder = "1.3.2"
netlink-packet-core = "0.3"
netlink-packet-utils = ">= 0.3, <0.5"

[dev-dependencies]
lazy_static = "1.4.0"
