[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-packet-audit"
version = "0.3.0"  # TODO: drop this comment - already bumped version for trait changes
edition = "2018"

homepage = "https://github.com/little-dude/netlink"
keywords = ["netlink", "linux"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/little-dude/netlink"
description = "netlink packet types"

[features]
default = ["tokio_socket"]
tokio_socket = ["netlink-proto/tokio_socket"]
smol_socket = ["netlink-proto/smol_socket"]

[dependencies]
anyhow = "1.0.31"
bytes = "1.0"
byteorder = "1.3.2"
log = "0.4.8"
netlink-packet-core = "0.3"
netlink-packet-utils = ">= 0.3, <0.5"
netlink-proto = { default-features = false, version = "0.8" }

[dev-dependencies]
lazy_static = "1.4.0"
