[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-packet-audit"
version = "0.4.1"
edition = "2018"

homepage = "https://github.com/little-dude/netlink"
keywords = ["netlink", "linux"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/little-dude/netlink"
description = "netlink packet types"

[dependencies]
anyhow = "1.0.31"
bytes = "1.0"
byteorder = "1.3.2"
log = "0.4.8"
netlink-packet-core = { version = "0.4.2", path = "../netlink-packet-core" }
netlink-packet-utils = { version = "0.5.1", path = "../netlink-packet-utils" }
netlink-proto = { default-features = false, version = "0.9.3", path = "../netlink-proto" }

[dev-dependencies]
lazy_static = "1.4.0"
