[package]
name = "netlink-packet-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
anyhow = "1.0.31"
#bytes = "1.0"
byteorder = "1.3.2"
#log = "0.4.8"
#netlink-packet-core = "0.4"
netlink-packet-core = { path = "../netlink-packet-core"}
netlink-packet-utils = "0.5"
#netlink-proto = { default-features = false, version = "0.9" }
serde = { version = "1.0", features = ["derive"] }
