[package]
name = "netlink-packet-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
anyhow = "1.0.31"
byteorder = "1.3.2"
netlink-packet-core = "0.4"
netlink-packet-utils = "0.5"
serde = { version = "1.0", features = ["derive"] }
