[package]
name = "netlink-packet-connector"
version = "0.1.0"
edition = "2021"
authors = ["Michael Hupfer <michael.hupfer@aox.de>"]
license = "MIT"
description = "Module for handling Linux kernel connector events"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
anyhow = "1.0.31"
byteorder = "1.3.2"
netlink-packet-core = "0.4"
netlink-packet-utils = "0.5"
netlink-sys = { version = "0.8.3", path = "../netlink-sys", features = ["tokio_socket"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
