[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-packet-core"
version = "0.4.1"
edition = "2018"

homepage = "https://github.com/little-dude/netlink"
keywords = ["netlink", "linux"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/little-dude/netlink"
description = "netlink packet types"

[dependencies]
anyhow = "1.0.31"
byteorder = "1.3.2"
libc = "0.2.66"
netlink-packet-utils = "0.5"

[dev-dependencies]
netlink-packet-route = "0.10"
