[package]
name = "netlink-packet-generic"
version = "0.2.0"
authors = ["Leo <leo881003@gmail.com>"]
edition = "2018"
homepage = "https://github.com/little-dude/netlink"
repository = "https://github.com/little-dude/netlink"
keywords = ["netlink", "linux"]
license = "MIT"
readme = "../README.md"
description = "generic netlink packet types"

[dependencies]
anyhow = "1.0.39"
libc = "0.2.86"
byteorder = "1.4.2"
netlink-packet-core = { version = "0.4.2", path = "../netlink-packet-core" }
netlink-packet-utils = { version = "0.5.1", path = "../netlink-packet-utils" }

[dev-dependencies]
netlink-sys = { path = "../netlink-sys", version = "0.8.2" }
