[package]
authors = ["Loïc Damien <loic.damien@dzamlo.ch>"]
name = "netlink-packet-netfilter"
version = "0.1.0"
edition = "2018"

homepage = "https://github.com/little-dude/netlink"
keywords = ["netlink", "linux", "netfilter"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/little-dude/netlink"
description = "netlink packet types for the netfilter subprotocol"

[dependencies]
anyhow = "1.0.32"
byteorder = "1.3.4"
netlink-packet-core = { version = "0.4.2", path = "../netlink-packet-core" }
netlink-packet-utils = { version = "0.5.1", path = "../netlink-packet-utils" }
bitflags = "1.2.1"
libc = "0.2.77"
derive_more = "0.99.16"

[dev-dependencies]
netlink-sys = { version = "0.8.2", path = "../netlink-sys" }
