[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-packet-route"
version = "0.1.0"
edition = "2018"

homepage = "https://github.com/little-dude/netlink"
keywords = ["netlink", "linux"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/little-dude/netlink"
description = "netlink packet types"

[dependencies]
failure = "0.1.6"
byteorder = "1.3.2"
libc = "0.2.66"
netlink-packet-core = { path = "../netlink-packet-core", version = "0.1" }
netlink-packet-utils = { path = "../netlink-packet-utils", version = "0.1" }

[[example]]
name = "dump_links"

[dev-dependencies]
criterion = "0.3.0"
pcap-file = "1.1.1"
lazy_static = "1.4.0"
netlink-sys = { path = "../netlink-sys", version = "0.2" }

[[bench]]
name = "link_message"
harness = false

[[bench]]
name = "rtnetlink_dump"
harness = false
