[package]
authors = ["Flier Lu <flier.lu@gmail.com>", "Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-packet-sock-diag"
version = "0.1.0"
edition = "2018"

homepage = "https://github.com/little-dude/netlink"
keywords = ["netlink", "linux", "sock_diag"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/little-dude/netlink"
description = "netlink packet types for the sock_diag subprotocol"

[dependencies]
failure = "0.1.5"
byteorder = "1.3.2"
netlink-packet-core = { path = "../netlink-packet-core", version = "0.1" }
netlink-packet-utils = { path = "../netlink-packet-utils", version = "0.1" }
bitflags = "*"
libc = "*"
smallvec = "*"

[dev-dependencies]
lazy_static = "1.4.0"