[package]
name = "netlink-packet-utils"
version = "0.1.1"
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
edition = "2018"
homepage = "https://github.com/little-dude/netlink"
repository = "https://github.com/little-dude/netlink"
license = "MIT"
description = "macros and helpers for parsing netlink messages"


[dependencies]
byteorder = "1.3.2"
failure = "0.1.6"
paste = "0.1.6"
