[package]
name = "netlink-packet-utils"
version = "0.2.0"
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
edition = "2018"
homepage = "https://github.com/little-dude/netlink"
repository = "https://github.com/little-dude/netlink"
license = "MIT"
description = "macros and helpers for parsing netlink messages"


[dependencies]
anyhow = "1.0.31"
byteorder = "1.3.2"
paste = "0.1.6"
thiserror = "1"
