[package]
name = "netlink-packet-wireguard"
version = "0.1.0"
authors = ["Leo <leo881003@gmail.com>"]
edition = "2018"
homepage = "https://github.com/little-dude/netlink"
repository = "https://github.com/little-dude/netlink"
keywords = ["wireguard", "netlink", "linux"]
license = "MIT"
readme = "../README.md"
description = "Wireguard generic netlink packet definitions"

[dependencies]
anyhow = "1.0.42"
byteorder = "1.4.3"
libc = "0.2.98"
log = "0.4.14"
netlink-packet-generic = "0.1.0"
netlink-packet-utils = "0.4.1"

[dev-dependencies]
base64 = "0.13.0"
env_logger = "0.9.0"
futures = "0.3.16"
netlink-packet-core = "0.2.4"
netlink-proto = "0.7.0"
genetlink = "0.1.0"
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }
