[package]
name = "netlink-packet-wireguard"
version = "0.2.1"
authors = ["Leo <leo881003@gmail.com>", "Jake McGinty <me@jake.su>"]
edition = "2018"
homepage = "https://github.com/little-dude/netlink"
repository = "https://github.com/little-dude/netlink"
keywords = ["wireguard", "netlink", "linux"]
license = "MIT"
readme = "../README.md"
description = "Wireguard generic netlink packet definitions"

[dependencies]
anyhow = "1.0.42"
byteorder = "1.4.3"
libc = "0.2.98"
log = "0.4.14"
netlink-packet-generic = { version = "0.3.1", path = "../netlink-packet-generic" }
netlink-packet-utils = { version = "0.5.1", path = "../netlink-packet-utils" }

[dev-dependencies]
base64 = "0.13.0"
env_logger = "0.9.0"
futures = "0.3.16"
netlink-packet-core = { version = "0.4.2", path = "../netlink-packet-core" }
netlink-proto = { version = "0.9.3", path = "../netlink-proto" }
genetlink = { version = "0.2.1", path = "../genetlink" }
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }
