[package]
name = "netlink-packet-xfrm"
version = "0.1.0"
authors = ["Scott Zuk <zooknotic@proton.me>"]
edition = "2018"
homepage = "https://github.com/zooknotic/netlink-packet-xfrm"
repository = "https://github.com/zooknotic/netlink-packet-xfrm"
keywords = ["netlink", "linux"]
license = "MIT"
readme = "../README.md"
description = "netlink xfrm packet types for IPsec"

[dependencies]
anyhow = "1.0.39"
byteorder = "1.4.2"
libc= "0.2.86"
netlink-packet-core = { version = "0.4.2", path = "../netlink-packet-core" }
netlink-packet-utils = { version = "0.5.1", path = "../netlink-packet-utils" }

[dev-dependencies]
lazy_static = "1.4.0"
netlink-proto = { path = "../netlink-proto", version = "0.10.0" }
netlink-sys = { path = "../netlink-sys", version = "0.8.3" }
