[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-packet"
version = "0.0.4"

homepage = "https://github.com/little-dude/netlink"
keywords = ["netlink", "linux"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/little-dude/netlink"
description = "netlink packet types"

[dependencies]
failure = "0.1.3"
failure_derive = "0.1.3"
byteorder = "1.2.7"
bytes = "0.4.11"
libc = "0.2.45"
log = "0.4.6"
netlink-sys = { path = "../netlink-sys", version = "0.0" }
lazy_static = "1.2.0"

[dependencies.eui48]
optional = true
version = "0.4.1"

[dependencies.bit_field]
optional = true
version = "0.9.0"

[dev-dependencies]
env_logger = "0.6.0"

[features]
# By default this crate does not does anything useful. You should enable a
# netlink protocol (either rtnetlink or audit), and optionally, tokio support.
default = []
# Adds support rtnetlink messages
rtnetlink = []
# Adds support audit messages
audit = ["bit_field"]

[[example]]
name = "dump_links"
required-features = ["rtnetlink"]
