[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-packet"
version = "0.1.1"
edition = "2018"

homepage = "https://github.com/little-dude/netlink"
keywords = ["netlink", "linux"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/little-dude/netlink"
description = "netlink packet types"

[dependencies]
failure = "0.1.3"
byteorder = "1.2.7"
bytes = "0.4.11"
libc = "0.2.45"
log = "0.4.6"
lazy_static = "1.2.0"

bitflags = { version = "1.0", optional = true }
try_from = { version = "0.3", optional = true }

netlink-sys = { path = "../netlink-sys", version = "0.1" }

[dev-dependencies]
pretty_env_logger = "0.3"
structopt = "0.2"
criterion = "0.2"
pcap-file = "*"

[features]
# By default this crate does not does anything useful. You should enable a
# netlink protocol (either rtnetlink or audit), and optionally, tokio support.
default = []
# Adds support rtnetlink messages
rtnetlink = []
# Adds support audit messages
audit = []
# Adds support sock_diag messages
sock_diag = ["bitflags", "try_from"]

[[example]]
name = "dump_links"
required-features = ["rtnetlink"]

[[example]]
name = "netstat"
required-features = ["sock_diag"]

[[bench]]
name = "link_message"
harness = false
required-features = ["rtnetlink"]

[[bench]]
name = "rtnetlink_dump"
harness = false
required-features = ["rtnetlink"]
