[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-proto"
version = "0.8.0"  # TODO: drop this comment - already bumped version for trait changes
edition = "2018"

homepage = "https://github.com/little-dude/netlink"
keywords = ["netlink", "linux", "async"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/little-dude/netlink"
description = "async netlink protocol"

[dependencies]
bytes = "1.0"
log = "0.4.8"
futures = "0.3"
tokio = { version = "1.0", default-features = false, features = ["io-util"] }
netlink-packet-core = "0.3"
netlink-sys = { default-features = false, version = "0.8" }

[features]
default = ["tokio_socket"]
tokio_socket = ["netlink-sys/tokio_socket"]
smol_socket = ["netlink-sys/smol_socket"]

[dev-dependencies]
env_logger = "0.8.2"
tokio = { version = "1.0.1", default-features = false, features = ["macros", "rt-multi-thread"] }
netlink-packet-route = "0.9"
netlink-packet-audit = "0.3"
async-std = {version = "1.9.0", features = ["attributes"]}

[[example]]
name = "dump_links"

[[example]]
name = "dump_links_async"
required-features = ["smol_socket"]

[[example]]
name = "audit_netlink_events"
